# photo_grid

./: .gitignore  README.md  meson.build
data/: io.github.photogrid.desktop.in  io.github.photogrid.metainfo.xml  meson.build
src/: meson.build  photo-grid.in  photo_grid.py
